[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils/utils.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
itertools = "0.12.0"
nom = "7.1.3"
